# Butterfly

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  PERFORMANCE_REPORT.md  README.md  clippy.toml  rustfmt.toml
.claude/agents/: codebase-orchestrator.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml
benches/: throughput.rs
crates/butterfly-api/: Cargo.toml
crates/butterfly-api/src/: lib.rs
crates/butterfly-cli/: Cargo.toml
crates/butterfly-cli/src/: main.rs
crates/butterfly-cluster/: SPECIFICATION.md
crates/butterfly-comm/: Cargo.toml
crates/butterfly-comm/src/: lib.rs
crates/butterfly-coordination/: Cargo.toml  README.md
crates/butterfly-coordination/src/: agreement.rs  barrier.rs  checkpoint.rs  failure_detector.rs  lib.rs  state_machine.rs  types.rs  work_assignment.rs
crates/butterfly-core/: Cargo.toml
crates/butterfly-core/src/: lib.rs  tensor.rs
crates/butterfly-core/src/state/: component.rs  invariants.rs  mod.rs  system.rs  transition.rs
crates/butterfly-metrics/: Cargo.toml
crates/butterfly-metrics/src/: lib.rs
crates/butterfly-partition/: Cargo.toml
crates/butterfly-partition/benches/: partition_bench.rs
crates/butterfly-partition/src/: lib.rs
crates/butterfly-schedule/: Cargo.toml
crates/butterfly-schedule/src/: lib.rs
docs/: BOOTSTRAP_PROTOCOL.md  CONFIGURATION_INDEX.md  COORDINATION_DIAGRAMS.md  COORDINATION_QUICKSTART.md  COORDINATION_SUMMARY.md  INITIALIZATION_QUICKSTART.md  INITIALIZATION_SUMMARY.md  INTEGRATION_IMPLEMENTATION_PLAN.md  INTEGRATION_PATTERNS.md  INTEGRATION_SUMMARY.md  OBSERVABILITY_QUICKSTART.md  OBSERVABILITY_SUMMARY.md  STATE_COHERENCE.md  STATE_MACHINE_SUMMARY.md  algorithms.md  architecture.md  butterfly-config-crate-spec.md  config_schema.toml  configuration_design.md  coordination_protocol.md  coordination_protocol.tla  debugging_guide.md  initialization_design.md  integration_architecture.md  metrics_specification.md  observability_design.md  optimization-summary.md  performance-analysis.md  state_machine_design.md  state_management_modules.md  tracing_design.md
docs/dashboards/: README.md  overview.json
docs/dashboards/alerts/: alerting-rules.yaml
docs/decisions/: 000-template.md  001-rust-language-choice.md  002-workspace-structure.md
examples/: hello_butterfly.rs  multi_node.rs
scripts/: run-tests.sh  setup-dev.sh
src/: communication.rs  distributed.rs  fault_tolerance.rs  lib.rs  load_balancer.rs  main.rs  node.rs  partition.rs
tests/: integration_test.rs  integration_tests.rs
tests/fixtures/: .gitkeep
