[package]
name = "butterfly"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = "0.18"
burn-ndarray = "0.18"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
