[workspace]
resolver = "2"
members = [
    "crates/butterfly-core",
    "crates/butterfly-comm",
    "crates/butterfly-coordination",
    "crates/butterfly-partition",
    "crates/butterfly-schedule",
    "crates/butterfly-api",
    "crates/butterfly-metrics",
    "crates/butterfly-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Butterfly Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tensorhusker/Butterfly"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Networking and communication
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
quinn = "0.10"  # QUIC protocol
tarpc = { version = "0.34", features = ["tokio1", "serde-transport", "serde-transport-bincode"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"  # MessagePack

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
opentelemetry = "0.21"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
parking_lot = "0.12"
bytes = "1.5"
futures = "0.3"
pin-project = "1.1"

# Testing
criterion = "0.5"
proptest = "1.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
