[package]
name = "butterfly-api"
version = "0.1.0"
edition = "2021"

[dependencies]
butterfly-core = { path = "../butterfly-core" }
butterfly-schedule = { path = "../butterfly-schedule" }
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
