[package]
name = "butterfly-coordination"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
butterfly-core = { path = "../butterfly-core" }
butterfly-comm = { path = "../butterfly-comm" }

# External dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
criterion = { workspace = true }
