[package]
name = "butterfly-partition"
version = "0.1.0"
edition = "2021"

[dependencies]
butterfly-core = { path = "../butterfly-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "partition_bench"
harness = false
